--- a/app/src/main/res/_A0_seller/layout/view_sub_seller_title.xml
+++ b/app/src/main/res/_A0_seller/layout/view_sub_seller_title.xml
@@ -1,165 +1,193 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+
+<android.support.v7.widget.CardView
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
-    android:id="@+id/view_seller_description"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+
+    xmlns:card_view="http://schemas.android.com/apk/res-auto"
+    card_view:cardPreventCornerOverlap="false">
 
     <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        xmlns:android="http://schemas.android.com/apk/res/android"
         android:orientation="vertical"
-
-        android:background="@color/honest_green">
-
+        android:id="@+id/view_seller_description"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal">
+            android:orientation="vertical"
+
+            android:background="@color/honest_green">
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-
-                android:layout_marginStart="@dimen/round_padding"
-                android:layout_marginEnd="@dimen/round_padding"
-                android:layout_marginTop="@dimen/round_padding"
-
                 android:orientation="horizontal">
 
-                <TextView
-                    android:layout_width="wrap_content"
+                <LinearLayout
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-
-                    android:text="Stock"
-                    android:textColor="@color/angel_white"
-                    android:textSize="@dimen/font_text_view"
-
-                    android:background="@color/dark_honest_green"
-
-                    android:paddingBottom="@dimen/round_padding"
-                    android:paddingTop="@dimen/round_padding"
-                    android:paddingStart="@dimen/round_padding"
-                    android:paddingEnd="@dimen/round_padding"
-                    android:gravity="center"/>
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-
-                    android:text="332 ชิ้น"
-                    android:textColor="@color/angel_white"
-                    android:textSize="@dimen/font_text_view"
-
-                    android:background="@color/rising_green"
-
-                    android:paddingBottom="@dimen/round_padding"
-                    android:paddingTop="@dimen/round_padding"
-                    android:paddingStart="@dimen/round_padding"
-                    android:paddingEnd="@dimen/round_padding"
-
-                    android:gravity="center"
-
-                    android:id="@+id/storage"/>
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-
-                    android:text="ยอดขาย 30 วัน"
-                    android:textColor="@color/angel_white"
-                    android:textSize="@dimen/font_text_view"
 
                     android:layout_marginStart="@dimen/round_padding"
+                    android:layout_marginEnd="@dimen/round_padding"
+                    android:layout_marginTop="@dimen/round_padding"
 
-                    android:background="@color/dark_honest_green"
+                    android:orientation="horizontal">
 
-                    android:paddingBottom="@dimen/round_padding"
-                    android:paddingTop="@dimen/round_padding"
-                    android:paddingStart="@dimen/round_padding"
-                    android:paddingEnd="@dimen/round_padding"
+                    <TextView
+                        android:layout_width="0dp"
+                        android:layout_height="match_parent"
 
-                    android:gravity="right"/>
+                        android:layout_weight="2.5"
 
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                        android:text="Stock"
+                        android:textColor="@color/angel_white"
+                        android:textSize="@dimen/font_text_view"
 
-                    android:text="332 ชิ้น"
-                    android:textColor="@color/angel_white"
-                    android:textSize="@dimen/font_text_view"
+                        android:background="@color/dark_honest_green"
 
-                    android:background="@color/rising_green"
+                        android:paddingBottom="@dimen/round_padding"
+                        android:paddingTop="@dimen/round_padding"
+                        android:paddingStart="@dimen/round_padding"
+                        android:paddingEnd="@dimen/round_padding"
+                        android:gravity="center"/>
 
-                    android:paddingBottom="@dimen/round_padding"
-                    android:paddingTop="@dimen/round_padding"
-                    android:paddingStart="@dimen/round_padding"
-                    android:paddingEnd="@dimen/round_padding"
+                    <TextView
+                        android:layout_width="0dp"
+                        android:layout_height="match_parent"
 
-                    android:gravity="center"
+                        android:layout_weight="2.5"
 
-                    android:id="@+id/quantity"/>
+                        android:layout_marginEnd="@dimen/slice_align"
 
+                        android:text="332 ชิ้น"
+                        android:textColor="@color/angel_white"
+                        android:textSize="@dimen/font_text_view"
+
+                        android:background="@color/rising_green"
+
+                        android:paddingBottom="@dimen/round_padding"
+                        android:paddingTop="@dimen/round_padding"
+                        android:paddingStart="@dimen/round_padding"
+                        android:paddingEnd="@dimen/round_padding"
+
+                        android:gravity="center"
+
+                        android:id="@+id/storage"/>
+
+                    <!--<View-->
+                        <!--android:layout_width="0dp"-->
+                        <!--android:layout_height="match_parent"-->
+                        <!---->
+                        <!--android:layout_weight="1"/>-->
+
+                    <TextView
+                        android:layout_width="0dp"
+                        android:layout_height="match_parent"
+
+                        android:layout_weight="2.5"
+
+                        android:text="ยอดขาย"
+                        android:textColor="@color/angel_white"
+                        android:textSize="@dimen/font_text_view"
+
+                        android:layout_marginStart="@dimen/slice_align"
+
+                        android:background="@color/dark_honest_green"
+
+                        android:paddingBottom="@dimen/round_padding"
+                        android:paddingTop="@dimen/round_padding"
+                        android:paddingStart="@dimen/round_padding"
+                        android:paddingEnd="@dimen/round_padding"
+
+                        android:gravity="center"/>
+
+                    <TextView
+                        android:layout_width="0dp"
+                        android:layout_height="match_parent"
+
+                        android:layout_weight="2.5"
+
+                        android:text="332 ชิ้น"
+                        android:textColor="@color/angel_white"
+                        android:textSize="@dimen/font_text_view"
+
+                        android:background="@color/rising_green"
+
+                        android:paddingBottom="@dimen/round_padding"
+                        android:paddingTop="@dimen/round_padding"
+                        android:paddingStart="@dimen/round_padding"
+                        android:paddingEnd="@dimen/round_padding"
+
+                        android:gravity="center"
+
+                        android:id="@+id/quantity"/>
+
+                </LinearLayout>
             </LinearLayout>
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-
-                android:layout_marginStart="@dimen/round_padding"
-                android:layout_marginEnd="@dimen/round_padding"
-                android:layout_marginBottom="@dimen/round_padding"
-                android:layout_marginTop="@dimen/round_padding"
-
                 android:orientation="horizontal">
 
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-
-                    android:text="Day Cover"
-                    android:textColor="@color/angel_white"
-                    android:textSize="@dimen/font_text_view"
-
-                    android:background="@color/dark_honest_green"
-
-                    android:paddingTop="@dimen/round_padding"
-                    android:paddingBottom="@dimen/round_padding"
-
-                    android:paddingStart="@dimen/double_round"
-                    android:paddingEnd="@dimen/double_round"
-
-                    android:gravity="center"/>
-
-                <TextView
+                <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
 
-                    android:text="332 ชิ้น"
-                    android:textColor="@color/angel_white"
-                    android:textSize="@dimen/font_text_view"
+                    android:layout_marginStart="@dimen/round_padding"
+                    android:layout_marginEnd="@dimen/round_padding"
+                    android:layout_marginBottom="@dimen/round_padding"
+                    android:layout_marginTop="@dimen/round_padding"
+
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+
+                        android:layout_weight="5"
+
+                        android:text="Day Cover"
+                        android:textColor="@color/angel_white"
+                        android:textSize="@dimen/font_text_view"
+
+                        android:background="@color/dark_honest_green"
+
+                        android:paddingTop="@dimen/round_padding"
+                        android:paddingBottom="@dimen/round_padding"
+
+                        android:paddingStart="@dimen/double_round"
+                        android:paddingEnd="@dimen/double_round"
+
+                        android:gravity="center"/>
+
+                    <TextView
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+
+                        android:layout_weight="5"
+
+                        android:text="332 ชิ้น"
+                        android:textColor="@color/angel_white"
+                        android:textSize="@dimen/font_text_view"
 
 
-                    android:background="@color/rising_green"
+                        android:background="@color/rising_green"
 
-                    android:paddingBottom="@dimen/round_padding"
-                    android:paddingTop="@dimen/round_padding"
-                    android:paddingStart="@dimen/double_round"
-                    android:paddingEnd="@dimen/double_round"
+                        android:paddingBottom="@dimen/round_padding"
+                        android:paddingTop="@dimen/round_padding"
+                        android:paddingStart="@dimen/double_round"
+                        android:paddingEnd="@dimen/double_round"
 
-                    android:gravity="center"
+                        android:gravity="center"
 
-                    android:id="@+id/day_cover"/>
+                        android:id="@+id/day_cover"/>
+                </LinearLayout>
             </LinearLayout>
         </LinearLayout>
     </LinearLayout>
-
-</LinearLayout>
+</android.support.v7.widget.CardView>
