--- a/app/src/main/res/drawable/shape_elevation.xml
+++ b/app/src/main/res/drawable/shape_elevation.xml
@@ -1,32 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layer-list xmlns:android="http://schemas.android.com/apk/res/android">
-    <item>
-        <shape android:shape="rectangle">
-            <solid android:color="@color/little_light_gray"/>
-            <corners android:radius="2dp" />
-        </shape>
-    </item>
+<shape xmlns:android="http://schemas.android.com/apk/res/android"
+    android:shape="rectangle">
 
-    <item
-        android:left="0.3dp"
-        android:right="0.3dp"
-        android:top="0.3dp"
-        android:bottom="2dp">
-        <shape android:shape="rectangle">
-            <solid android:color="@color/shadow_gray"/>
-            <corners android:radius="0dp" />
-        </shape>
-    </item>
+    <gradient android:startColor="@android:color/transparent"
+        android:endColor="#55333333"
+        android:angle="90"/>
 
-    <item
-        android:left="1dp"
-        android:right="1dp"
-        android:top="1dp"
-        android:bottom="1.5dp">
-        <shape android:shape="rectangle">
-            <solid android:color="@color/angel_white"/>
-            <corners android:radius="3dp" />
-        </shape>
-    </item>
-
-</layer-list>
+</shape>
